# embedded-infra-lib

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  sitemap.xml  sonar-project.properties
.clusterfuzzlite/: Dockerfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  dependency-scanner.yml  documentation.yml  fuzzing-batch.yml  fuzzing-cron.yml  fuzzing-pr.yml  linting-formatting.yml  release-please.yml  security.yml  static-analysis.yml
embedded_infrastructure_library/4.0.0/: CodingStandard.html  Containers.html  Echo.html  ExecutionModel.html  MemoryRange.html  NetworkConnections.html  index.html
fsal/: CMakeLists.txt
fsal/fatfs/: CMakeLists.txt  DirectoryFatFs.cpp  DirectoryFatFs.hpp  DriverFatFs.cpp  DriverFatFs.hpp  FileFatFs.cpp  FileFatFs.hpp  FilesystemFatFs.cpp  FilesystemFatFs.hpp
fsal/interfaces/: CMakeLists.txt  Directory.hpp  File.hpp  Object.hpp  Volume.hpp
hal/interfaces/: CMakeLists.txt  DisplayLcd.cpp  DisplayLcd.hpp  Ethernet.hpp  Pwm.hpp  PwmInput.hpp  QuadratureEncoder.hpp  UsbLinkLayer.hpp
hal/interfaces/test_doubles/: CMakeLists.txt  PwmInputMock.hpp  PwmMock.hpp  QuadratureEncoderMock.hpp
hal/synchronous_interfaces/: CMakeLists.txt  SynchronousDisk.hpp  SynchronousMultiMediaCard.hpp
infra/util/: Unit.hpp
lwip/lwip_cpp/: LightweightIpOverEthernet.cpp
protobuf/echo/: protocol_buffer_echo.cmake
services/network/: WiFiNetwork.cpp  WiFiNetwork.hpp
services/util/: Terminal.cpp  Terminal.hpp
